Primeiras edições textuais

--- a/index.html
+++ b/index.html
@@ -1448,11 +1448,11 @@
                                 <i class="icon-finance-086 u-line-icon-pro"></i>
                             </span>
                             <h3 class="h5 g-color-gray-dark-v2 g-font-weight-600 text-uppercase mb-3">
-                                Automação
+                                Conforto e segurança
                             </h3>
                             <p class="mb-0">
-                                We strive to embrace and drive change in our industry which
-                                allows us to keep our clients relevant.
+                                A automação remota de lâmpadas, aparelhos de ar condicionado, portas, máquinas 
+                                elétricas e fitas Led decorativas, entre outros, traz praticidade e conforto.
                             </p>
                         </div>
                         <!-- End Icon Blocks -->
@@ -1466,11 +1466,11 @@
                                 <i class="icon-finance-196 u-line-icon-pro"></i>
                             </span>
                             <h3 class="h5 g-color-gray-dark-v2 g-font-weight-600 text-uppercase mb-3">
-                                Monitoramento
+                                Monitoramento remoto
                             </h3>
                             <p class="mb-0">
-                                We strive to embrace and drive change in our industry which
-                                allows us to keep our clients relevant.
+                                É possível saber em detalhes como sua instalação ou equipamento está consumindo
+                                recursos valiosos como energia elétrica, água, gás etc.
                             </p>
                         </div>
                         <!-- End Icon Blocks -->
@@ -1487,8 +1487,7 @@
                                 Economia
                             </h3>
                             <p class="mb-0">
-                                We strive to embrace and drive change in our industry which
-                                allows us to keep our clients relevant.
+                                Quer evitar supresas desagradáveis na fatura mensal?
                             </p>
                         </div>
                         <!-- End Icon Blocks -->
@@ -1941,13 +1940,11 @@
                 <header class="g-mb-50">
                     <div class="u-heading-v2-3--bottom g-brd-primary g-mb-20">
                         <h2 class="h4 u-heading-v2__title g-color-gray-dark-v2 g-font-weight-600 text-uppercase">
-                            Ùltimas Notícias
+                            Últimas notícias
                         </h2>
                     </div>
                     <p class="g-font-size-16">
-                        Unify creative technology company providing key digital services.
-                        At vero eoset dignissimos ducimus qui blanditiis praesentium
-                        voluptatum deleniti atque corrupti quos dolores et quas moles.
+                        Nosoo canal de comunicação.
                     </p>
                 </header>
 
@@ -2076,7 +2073,7 @@
             <div class="d-md-flex justify-content-md-center text-center">
                 <div class="align-self-md-center">
                     <p class="lead g-font-weight-400 g-mr-20--md g-mb-15 g-mb-0--md">
-                        We offer best in class service for your needs
+                        Projetos IoT sob demanda
                     </p>
                 </div>
                 <!-- botão -->
@@ -2097,13 +2094,14 @@
                     <div class="col-lg-3 col-md-6 g-mb-40 g-mb-0--lg">
                         <div class="u-heading-v2-3--bottom g-brd-white-opacity-0_8 g-mb-20">
                             <h2 class="u-heading-v2__title h6 text-uppercase mb-0">
-                                About Us
+                                Sobre a Simemap
                             </h2>
                         </div>
-
                         <p>
-                            About Unify dolor sit amet, consectetur adipiscing elit.
-                            Maecenas eget nisl id libero tincidunt sodales.
+                            A Simemap é uma startup que desenvolve seus próprios produtos, 
+                            incluindo Hardware e Software com ferramentas modernas de IoT. 
+                            Seja para instalações residenciais ou não-residenciais, você pode monitorar 
+                            e controlar seus equipamentos a partir do seu smartphone ou computador pessoal.
                         </p>
                     </div>
                     <!-- End Footer Content -->
@@ -2112,36 +2110,38 @@
                     <div class="col-lg-3 col-md-6 g-mb-40 g-mb-0--lg">
                         <div class="u-heading-v2-3--bottom g-brd-white-opacity-0_8 g-mb-20">
                             <h2 class="u-heading-v2__title h6 text-uppercase mb-0">
-                                Latest Posts
+                                Principais características
                             </h2>
                         </div>
 
                         <article>
                             <h3 class="h6 g-mb-2">
-                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Incredible
-                                    template</a>
+                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Monitoramento</a>
                             </h3>
-                            <div class="small g-color-white-opacity-0_6">May 8, 2017</div>
+                            <div class="small g-color-white-opacity-0_6">Consumo de energia elétrica ou água, 
+                                temperatura ou outras informações relevantes.</div>
                         </article>
 
                         <hr class="g-brd-white-opacity-0_1 g-my-10" />
 
                         <article>
                             <h3 class="h6 g-mb-2">
-                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">New features</a>
+                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Automação</a>
                             </h3>
-                            <div class="small g-color-white-opacity-0_6">June 23, 2017</div>
+                            <div class="small g-color-white-opacity-0_6">Agendamento de eventos</div>
                         </article>
 
                         <hr class="g-brd-white-opacity-0_1 g-my-10" />
 
                         <article>
                             <h3 class="h6 g-mb-2">
-                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">New terms and
-                                    conditions</a>
+                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Pesquisa e 
+                                    Inovação</a>
                             </h3>
                             <div class="small g-color-white-opacity-0_6">
-                                September 15, 2017
+                                Simemap é a primeira empresa incubada nascida no IFTO. É fruto de pesquisa acadêmica 
+                                iniciada em 2016, e busca trazer também a alunos do Instituto Federal 
+                                oportunidades de conhecer novas tecnologias.
                             </div>
                         </article>
                     </div>
@@ -2151,7 +2151,7 @@
                     <div class="col-lg-3 col-md-6 g-mb-40 g-mb-0--lg">
                         <div class="u-heading-v2-3--bottom g-brd-white-opacity-0_8 g-mb-20">
                             <h2 class="u-heading-v2__title h6 text-uppercase mb-0">
-                                Useful Links
+                                Saiba mais
                             </h2>
                         </div>
 
@@ -2159,24 +2159,23 @@
                             <ul class="list-unstyled g-mt-minus-10 mb-0">
                                 <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
                                     <h4 class="h6 g-pr-20 mb-0">
-                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">About Us</a>
+                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Sobre</a>
                                         <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
                                     </h4>
                                 </li>
                                 <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
                                     <h4 class="h6 g-pr-20 mb-0">
-                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Portfolio</a>
+                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Características</a>
                                         <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
                                     </h4>
                                 </li>
                                 <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
                                     <h4 class="h6 g-pr-20 mb-0">
-                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Our
-                                            Services</a>
+                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Serviços</a>
                                         <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
                                     </h4>
                                 </li>
-                                <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
+                                <!-- <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
                                     <h4 class="h6 g-pr-20 mb-0">
                                         <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Latest
                                             Jobs</a>
@@ -2189,7 +2188,7 @@
                                             Us</a>
                                         <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
                                     </h4>
-                                </li>
+                                </li> -->
                             </ul>
                         </nav>
                     </div>
@@ -2199,7 +2198,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="u-heading-v2-3--bottom g-brd-white-opacity-0_8 g-mb-20">
                             <h2 class="u-heading-v2__title h6 text-uppercase mb-0">
-                                Our Contacts
+                                Contate-nos!
                             </h2>
                         </div>
 
@@ -2214,8 +2213,8 @@
                                     </span>
                                 </div>
                                 <p class="mb-0">
-                                    795 Folsom Ave, Suite 600, <br />
-                                    San Francisco, CA 94107 795
+                                    Bloco 11, IFTO, <br />
+                                    Palmas, TO - Brasil
                                 </p>
                             </div>
                             <!-- End Location -->
@@ -2229,8 +2228,7 @@
                                     </span>
                                 </div>
                                 <p class="mb-0">
-                                    (+123) 456 7890 <br />
-                                    (+123) 456 7891
+                                    (63) 98494 3041
                                 </p>
                             </div>
                             <!-- End Phone -->
@@ -2245,10 +2243,10 @@
                                 </div>
                                 <p class="mb-0">
                                     <a class="g-color-white-opacity-0_8 g-color-white--hover"
-                                        href="mailto:info@htmlstream.com">info@htmlstream.com</a>
+                                        href="mailto:info@htmlstream.com">simemap@simemap.com</a>
                                     <br />
                                     <a class="g-color-white-opacity-0_8 g-color-white--hover"
-                                        href="#">www.htmlstream.com</a>
+                                        href="#">www.simemap.com</a>
                                 </p>
                             </div>
                             <!-- End Email and Website -->
