Grupo 2 de edições textuais

--- a/index.html
+++ b/index.html
@@ -1519,7 +1519,7 @@
                         <ul class="list-unstyled g-color-gray-dark-v4 mb-0">
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
-                                Hardwares certificados pela ANATEL
+                                Módulo de comunicação WiFI certificado pela ANATEL
                             </li>
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
@@ -1536,11 +1536,11 @@
                             </li>
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
-                                GSM dedicado, WiFi, bluetooth, Bluetooth Low Energy & BLE Mesh Networking, LoRa
+                                GSM dedicado, WiFi, LoRa, Bluetooth, Bluetooth Low Energy & BLE Mesh Networking
                             </li>
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
-                                Algorítimos de monitoramento de qualidade energética
+                                Algoritmos de monitoramento de qualidade energética
                             </li>
                         </ul>
                     </div>
@@ -1549,7 +1549,7 @@
                         style="background-image: url(assets/img/maps/map3.png);">
                         <div class="g-absolute-centered text-center w-100 g-px-40">
                             <h2 class="h1 g-color-gray-light-v2 g-font-weight-600 g-letter-spacing-0_5">
-                                SMEMAP é
+                                SIMEMAP é
                                 <span class="u-text-animation u-text-animation--typing"></span>
                             </h2>
                         </div>
@@ -1567,7 +1567,7 @@
                 <header class="g-mb-50">
                     <div class="u-heading-v2-3--bottom g-brd-primary g-mb-20">
                         <h2 class="h4 u-heading-v2__title g-color-gray-dark-v2 g-font-weight-600 text-uppercase">
-                            Our Recent Projects
+                            Nossos projetos recente
                         </h2>
                     </div>
                     <p class="g-font-size-16">
@@ -1944,7 +1944,7 @@
                         </h2>
                     </div>
                     <p class="g-font-size-16">
-                        Nosoo canal de comunicação.
+                        Nosso canal de comunicação.
                     </p>
                 </header>
 
@@ -1957,9 +1957,9 @@
                                     <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">Implementação de Criptografia no LoRa</a>
                                 </h3>
                                 <p>
-                                    At vero eos et accusamus et iusto odio dignissimos ducimus
-                                    qui blanditiis praesentium voluptatum deleniti atque
-                                    corrupti quos dolores.
+                                    A tecnologia LoRa permite a comunicação de pqeuenos fluxos de dados em longas distâncias, 
+                                    com consumo reduzido de enrgia. É ideal para aplicações IoT. Os novos produtos criados pela Simemap
+                                    já utilizam este recurso, com criptografia AES 128 bits entre os nós de comunicação.
                                 </p>
                             </div>
 
@@ -1967,8 +1967,8 @@
                                 <img class="d-flex mr-2 rounded-circle g-width-20 g-height-20"
                                     src="assets/img-temp/100x100/img5.jpg" alt="Image description" />
                                 <div class="media-body align-self-center">
-                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">Kathy
-                                        Reyes</a>
+                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">Marcus
+                                        André</a>
                                 </div>
 
                                 <div class="align-self-center">
@@ -1987,18 +1987,16 @@
                     </div>
 
                     <div class="col-lg-4 g-mb-30 g-mb-0--lg">
-                        <!-- Article -->
                         <article class="u-shadow-v11 rounded">
                             <div class="g-pa-30">
                                 <h3 class="g-font-weight-300 g-mb-15">
-                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">We build
-                                        your website to realise your vision, project and
-                                        more</a>
+                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">Placas de desenvolvimento
+                                        para o mundo Maker!
+                                    </a>
                                 </h3>
                                 <p>
-                                    At vero eos et accusamus et iusto odio dignissimos ducimus
-                                    qui blanditiis praesentium voluptatum deleniti atque
-                                    corrupti quos dolores.
+                                    Placas de desenvolvimento para hobbystas e projetistas profissionais. Projeto open source, 
+                                    com conexão USB-C.
                                 </p>
                             </div>
 
@@ -2006,8 +2004,7 @@
                                 <img class="d-flex mr-2 rounded-circle g-width-20 g-height-20"
                                     src="assets/img-temp/100x100/img4.jpg" alt="Image description" />
                                 <div class="media-body align-self-center">
-                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">Anastasia
-                                        Sh.</a>
+                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">Marcus André</a>
                                 </div>
 
                                 <div class="align-self-center">
@@ -2022,22 +2019,18 @@
                                 </div>
                             </div>
                         </article>
-                        <!-- End Article -->
                     </div>
 
                     <div class="col-lg-4">
-                        <!-- Article -->
                         <article class="u-shadow-v11 rounded">
                             <div class="g-pa-30">
                                 <h3 class="g-font-weight-300 g-mb-15">
                                     <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover"
-                                        href="#">Praesentium to website realise imperdiet demore
-                                        elementum</a>
+                                        href="#">Homologação Anatel</a>
                                 </h3>
                                 <p>
-                                    Nullam elementum tincidunt massa, a pulvinar leo ultricies
-                                    ut. Ut fringilla lectus tellusimp imperdiet molestie est
-                                    volutpat at. Sed viverra cursus nibh.
+                                    Saiu! Anatel publica parecer final, homologando o microcontrolador ESP32-WROOM-32 
+                                    para uso nos produtos Simemap.
                                 </p>
                             </div>
 
@@ -2045,8 +2038,8 @@
                                 <img class="d-flex mr-2 rounded-circle g-width-20 g-height-20"
                                     src="assets/img-temp/100x100/img7.jpg" alt="Image description" />
                                 <div class="media-body align-self-center">
-                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">James
-                                        Dalglish</a>
+                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">Marcus
+                                        André</a>
                                 </div>
 
                                 <div class="align-self-center">
@@ -2061,7 +2054,6 @@
                                 </div>
                             </div>
                         </article>
-                        <!-- End Article -->
                     </div>
                 </div>
             </div>
@@ -2394,7 +2386,7 @@
             $(".u-text-animation.u-text-animation--typing").typed({
                 strings: [
                     "automação e monitoramento",
-                    "eficiência",
+                    "eficiência energética",
                     "economia 4.0",
                     "internet das coisas",
                 ],
