atualização links part1

--- a/index.html
+++ b/index.html
@@ -1237,22 +1237,21 @@
                                 <!-- HOME -->
                                 <!-- <li class="nav-item g-mx-10--lg g-mx-15--xl active"> -->
                                 <li class="hs-has-mega-menu nav-item active g-mx-10--lg g-mx-15--xl">   
-                                    
-                                    <a href="../../unify-main/shortcodes/index.html"
+                                    <a href="index.html"
                                         class="nav-link g-py-7 g-px-0">HOME</a>
                                 </li>
                                 <!-- Fim HOME-->
 
                                 <!-- PAGES -->
                                 <li class="nav-item g-mx-10--lg g-mx-15--xl">
-                                    <a href="../../unify-main/shortcodes/index.html"
+                                    <a href="index.html"
                                         class="nav-link g-py-7 g-px-0">PAGES</a>
                                 </li>
                                 <!-- Fim PAGES-->
 
                                 <!-- BLOG -->
                                 <li class="nav-item g-mx-10--lg g-mx-15--xl">
-                                    <a href="../../unify-main/shortcodes/index.html"
+                                    <a href="index.html"
                                         class="nav-link g-py-7 g-px-0">BLOG</a>
                                 </li>
                                 <!-- Fim BLOG-->
@@ -1260,14 +1259,14 @@
 
                                 <!-- Contatos -->
                                 <li class="nav-item g-mx-10--lg g-mx-15--xl">
-                                    <a href="../../unify-main/shortcodes/index.html"
+                                    <a href="index.html"
                                         class="nav-link g-py-7 g-px-0">CONTATOS</a>
                                 </li>
                                 <!-- Fim Contatos -->
 
                                 <!-- Sobre -->
                                 <li class="nav-item g-mx-10--lg g-mx-15--xl">
-                                    <a href="../../unify-main/shortcodes/index.html"
+                                    <a href="index.html"
                                         class="nav-link g-py-7 g-px-0">SOBRE</a>
                                 </li>
                                 <!-- End Sobre -->
