criação de novos arquivos

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <link rel="stylesheet" href="assets/vendor/hs-megamenu/src/hs.megamenu.css" />
     <link rel="stylesheet" href="assets/vendor/hamburgers/hamburgers.min.css" />
 
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+
     <!-- CSS Unify -->
     <link rel="stylesheet" href="assets/css/unify-core.css" />
     <link rel="stylesheet" href="assets/css/unify-components.css" />
