--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- Title -->
-    <title>SIMEMAP</title>
+    <title>SIMEMAP - HOME</title>
 
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8" />
