alteração da logo

--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@
                             </span>
                         </button>
                         <!-- End Responsive Toggle Button -->
+                        <a href="#" class="navbar-brand d-flex">
+                            <img src="imgs/logo_menu.png" width="157px" height="62px">
+                        </a>
 
                         <!-- Logo -->
-                        <a href="../../index.html" class="navbar-brand d-flex">
+                        <!-- <a href="../../index.html" class="navbar-brand d-flex">
                             <svg width="86px" height="32px" viewBox="0 0 86 32" version="1.1"
                                 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
@@ -85,7 +88,7 @@
                                     </g>
                                 </g>
                             </svg>
-                        </a>
+                        </a> -->
                         <!-- End Logo -->
 
                         <!-- Navigation -->
