atualização imagens carrossel - Parte 2

--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
 
                             <div class="js-slide">
                                 <a class="js-fancybox d-block g-pos-rel" data-rel="lightbox-gallery--08-1"
-                                    href="assets/img-temp/600x450/img3.jpg" title="Lightbox Gallery"
+                                    href="imgs/carosel-2.jpeg" title="Lightbox Gallery"
                                     data-open-effect="bounceInDown" data-close-effect="bounceOutDown"
                                     data-open-speed="1000" data-close-speed="1000" data-blur-bg="true">
-                                    <img class="img-fluid w-100 rounded" data-lazy="assets/img-temp/600x450/img3.jpg"
-                                        alt="Image description" />
+                                    <img class="img-fluid w-100 rounded" data-lazy="imgs/carosel-2.jpeg"
+                                        alt="Image description" width="600" height="450" />
                                 </a>
                             </div>
 
