--- a/index.html
+++ b/index.html
@@ -283,36 +283,6 @@
                                         alt="Image description" width="600" height="450" />
                                 </a>
                             </div>
-
-                            <div class="js-slide">
-                                <a class="js-fancybox d-block g-pos-rel" data-rel="lightbox-gallery--08-1"
-                                    href="assets/img-temp/600x450/img4.jpg" title="Lightbox Gallery"
-                                    data-open-effect="bounceInDown" data-close-effect="bounceOutDown"
-                                    data-open-speed="1000" data-close-speed="1000" data-blur-bg="true">
-                                    <img class="img-fluid w-100 rounded" data-lazy="assets/img-temp/600x450/img4.jpg"
-                                        alt="Image description" />
-                                </a>
-                            </div>
-
-                            <div class="js-slide">
-                                <a class="js-fancybox d-block g-pos-rel" data-rel="lightbox-gallery--08-1"
-                                    href="assets/img-temp/600x450/img5.jpg" title="Lightbox Gallery"
-                                    data-open-effect="bounceInDown" data-close-effect="bounceOutDown"
-                                    data-open-speed="1000" data-close-speed="1000" data-blur-bg="true">
-                                    <img class="img-fluid w-100 rounded" data-lazy="assets/img-temp/600x450/img5.jpg"
-                                        alt="Image description" />
-                                </a>
-                            </div>
-
-                            <div class="js-slide">
-                                <a class="js-fancybox d-block g-pos-rel" data-rel="lightbox-gallery--08-1"
-                                    href="assets/img-temp/600x450/img7.jpg" title="Lightbox Gallery"
-                                    data-open-effect="bounceInDown" data-close-effect="bounceOutDown"
-                                    data-open-speed="1000" data-close-speed="1000" data-blur-bg="true">
-                                    <img class="img-fluid w-100 rounded" data-lazy="assets/img-temp/600x450/img7.jpg"
-                                        alt="Image description" />
-                                </a>
-                            </div>
                         </div>
 
                         <div id="carouselCus2" class="js-carousel text-center u-carousel-v3 g-mx-minus-10"
@@ -320,27 +290,12 @@
                             data-slides-show="4" data-is-thumbs="true" data-nav-for="#carouselCus1">
                             <div class="js-slide g-px-10">
                                 <img class="img-fluid g-cursor-pointer rounded"
-                                    data-lazy="assets/img-temp/600x450/img6.jpg" alt="Image description" />
+                                    data-lazy="imgs/carosel-1.jpeg" alt="Image description" />
                             </div>
 
                             <div class="js-slide g-px-10">
                                 <img class="img-fluid g-cursor-pointer rounded"
-                                    data-lazy="assets/img-temp/600x450/img3.jpg" alt="Image description" />
-                            </div>
-
-                            <div class="js-slide g-px-10">
-                                <img class="img-fluid g-cursor-pointer rounded"
-                                    data-lazy="assets/img-temp/600x450/img4.jpg" alt="Image description" />
-                            </div>
-
-                            <div class="js-slide g-px-10">
-                                <img class="img-fluid g-cursor-pointer rounded"
-                                    data-lazy="assets/img-temp/600x450/img5.jpg" alt="Image description" />
-                            </div>
-
-                            <div class="js-slide g-px-10">
-                                <img class="img-fluid g-cursor-pointer rounded"
-                                    data-lazy="assets/img-temp/600x450/img7.jpg" alt="Image description" />
+                                    data-lazy="imgs/carosel-2.jpeg" alt="Image description" />
                             </div>
                         </div>
                     </div>
