texto p/ carrossel parte 1

--- a/index.html
+++ b/index.html
@@ -352,29 +352,26 @@
                             <div class="u-heading-v2-3--bottom g-brd-primary g-mb-30">
                                 <h2
                                     class="h4 u-heading-v2__title g-color-gray-dark-v2 g-font-weight-600 text-uppercase">
-                                    Our Environment
+                                    Alguns produtos já disponíveis:
                                 </h2>
                             </div>
-                            <p class="g-font-size-16">
-                                Unify <strong>creative</strong> technology company providing
-                                key digital services. Focused on helping our clients to build
-                                a <strong>successful</strong> business on web and mobile.
+                            <p class="g-font-size-16"> 
+                                <!-- <strong>creative</strong> -->
+                                - Módulos de automação para portas com comunicação WiFi e LoRa 915 MHz. Opções com antena externa ou em PCB.
+                                - Módulos de desenvolvimento para <strong>mentes criativas</strong>. Facilidade de programação através do ambiente Arduino IDE.
                             </p>
                         </header>
 
                         <div class="g-mb-30">
                             <p>
-                                There are many variations of passages of Lorem Ipsum
-                                available, but the majority have suffered alteration in some
-                                form, by injected humour, or randomised words which don't look
-                                even slightly believable.
+                                Diferentes configurações, conforme a demanda do cliente.
                             </p>
-                            <p>
+                            <!-- <p>
                                 Passages are many variations of passages of Lorem Ipsum
                                 available, but the majority have suffered alteration in some
                                 form, by injected humour, or randomised words which don't look
                                 even slightly believable.
-                            </p>
+                            </p> -->
                         </div>
                         <!-- <a class="btn btn-xl u-btn-primary text-uppercase g-font-weight-600 g-font-size-12 rounded g-mr-15 g-mb-10 g-mb-0--sm"
                             href="#">Check It Now</a>
