remoção últimas notícias

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         <!-- End Counters -->
 
         <!-- Latest News -->
-        <section class="g-py-100">
+        <!-- <section class="g-py-100">
             <div class="container">
                 <header class="g-mb-50">
                     <div class="u-heading-v2-3--bottom g-brd-primary g-mb-20">
@@ -457,12 +457,12 @@
                     <p class="g-font-size-16">
                         Nosso canal de comunicação.
                     </p>
-                </header>
+                </header> -->
 
-                <div class="row">
-                    <div class="col-lg-4 g-mb-30 g-mb-0--lg">
+                <!-- <div class="row">
+                    <div class="col-lg-4 g-mb-30 g-mb-0--lg"> -->
                         <!-- Article -->
-                        <article class="u-shadow-v11 rounded">
+                        <!-- <article class="u-shadow-v11 rounded">
                             <div class="g-pa-30">
                                 <h3 class="g-font-weight-300 g-mb-15">
                                     <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover"
@@ -475,9 +475,9 @@
                                     criados pela Simemap
                                     já utilizam este recurso, com criptografia AES 128 bits entre os nós de comunicação.
                                 </p>
-                            </div>
+                            </div> -->
 
-                            <div class="media g-font-size-12 g-brd-top g-brd-gray-light-v4 g-pa-15-30">
+                            <!-- <div class="media g-font-size-12 g-brd-top g-brd-gray-light-v4 g-pa-15-30">
                                 <img class="d-flex mr-2 rounded-circle g-width-20 g-height-20"
                                     src="assets/img-temp/100x100/img5.jpg" alt="Image description" />
                                 <div class="media-body align-self-center">
@@ -496,11 +496,11 @@
                                     </a>
                                 </div>
                             </div>
-                        </article>
+                        </article> -->
                         <!-- End Article -->
-                    </div>
+                    <!-- </div> -->
 
-                    <div class="col-lg-4 g-mb-30 g-mb-0--lg">
+                    <!-- <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                         <article class="u-shadow-v11 rounded">
                             <div class="g-pa-30">
                                 <h3 class="g-font-weight-300 g-mb-15">
@@ -536,9 +536,9 @@
                                 </div>
                             </div>
                         </article>
-                    </div>
+                    </div> -->
 
-                    <div class="col-lg-4">
+                    <!-- <div class="col-lg-4">
                         <article class="u-shadow-v11 rounded">
                             <div class="g-pa-30">
                                 <h3 class="g-font-weight-300 g-mb-15">
@@ -574,8 +574,20 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- End Latest News -->
+
+        <section class="g-py-100">
+            <div class="container">
+                <header class="g-mb-50">
+                    <div class="u-heading-v2-3--bottom g-brd-primary g-mb-20">
+                        <h2 class="h4 u-heading-v2__title g-color-gray-dark-v2 g-font-weight-600 text-uppercase">
+                            estudos de caso
+                        </h2>
+                    </div>
+                </header>
+            </div>
+        </section>
 
         <!-- Call To Action -->
         <section class="g-bg-primary g-color-white g-pa-30" style="background-image: url(assets/img/bg/pattern5.png);">
