--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
 
                         <div class="d-inline-block g-hidden-md-down g-pos-rel g-valign-middle g-pl-30 g-pl-0--lg">
                             <a class="btn u-btn-outline-primary g-font-size-13 text-uppercase g-py-10 g-px-15"
-                                href="https://dash.simemap.com/home/devices"
-                                >Entrar</a>
+                                href="https://dash.simemap.com/home/devices">Entrar</a>
                         </div>
 
                     </div>
@@ -409,6 +408,126 @@
         </section>
         <!-- End About Our Company -->
 
+        <!-- estudo de casos -->
+        <section class="g-bg-secondary">
+            <div class="container g-pt-100 g-pb-130">
+                <!-- Icon Blocks -->
+                <div class="row no-gutters">
+                    <div class="col-sm-6 col-lg-3">
+                        <div class="g-pr-40 g-mt-20">
+                            <div class="g-mb-30">
+                                <h2 class="h2 g-color-black g-font-weight-600 g-line-height-1_2 mb-4 text-uppercase">
+                                    Estudo de casos</h2>
+                                <p class="g-font-weight-300 g-font-size-16">The time has come to bring those ideas and
+                                    plans to life. This is where we really begin to visualize your napkin sketches and
+                                    make them into beautiful pixels.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-9">
+                        <div class="js-carousel" data-infinite="true" data-slides-show="3" data-slides-scroll="3"
+                            data-center-mode="true" data-center-padding="1px"
+                            data-pagi-classes="u-carousel-indicators-v1 g-absolute-centered--x g-bottom-minus-30"
+                            data-responsive='[{
+                       "breakpoint": 992,
+                       "settings": {
+                         "slidesToShow": 2
+                       }
+                     }, {
+                       "breakpoint": 576,
+                       "settings": {
+                         "slidesToShow": 1
+                       }
+                     }]'>
+                            <div class="js-slide">
+                                <!-- Icon Blocks -->
+                                <div
+                                    class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v3 g-brd-left-none g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50 g-ml-minus-1">
+                                    <div class="mb-4">
+                                        <span
+                                            class="d-block g-color-gray-dark-v4 g-font-weight-700 text-right mb-3">01</span>
+                                        <span
+                                            class="u-icon-v3 u-shadow-v19 g-bg-white g-color-primary rounded-circle mb-4">
+                                            <i class="icon-education-087 u-line-icon-pro"></i>
+                                        </span>
+                                        <h3 class="h5 g-color-black g-font-weight-600 mb-3">Creative</h3>
+                                        <p>This is where we sit down, grab a cup of coffee and dial in the details.</p>
+                                    </div>
+                                    <a class="g-brd-bottom g-brd-gray-dark-v5 g-brd-primary--hover g-color-gray-dark-v5 g-color-primary--hover g-font-weight-600 g-font-size-12 text-uppercase g-text-underline--none--hover"
+                                        href="#">Read more</a>
+                                </div>
+                                <!-- End Icon Blocks -->
+                            </div>
+
+                            <div class="js-slide">
+                                <!-- Icon Blocks -->
+                                <div
+                                    class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v3 g-brd-left-none g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50 g-ml-minus-1">
+                                    <div class="mb-4">
+                                        <span
+                                            class="d-block g-color-gray-dark-v4 g-font-weight-700 text-right mb-3">02</span>
+                                        <span
+                                            class="u-icon-v3 u-shadow-v19 g-bg-white g-color-primary rounded-circle mb-4">
+                                            <i class="icon-education-035 u-line-icon-pro"></i>
+                                        </span>
+                                        <h3 class="h5 g-color-black g-font-weight-600 mb-3">Features</h3>
+                                        <p>This is where we sit down, grab a cup of coffee and dial in the details.</p>
+                                    </div>
+                                    <a class="g-brd-bottom g-brd-gray-dark-v5 g-brd-primary--hover g-color-gray-dark-v5 g-color-primary--hover g-font-weight-600 g-font-size-12 text-uppercase g-text-underline--none--hover"
+                                        href="#">Read more</a>
+                                </div>
+                                <!-- End Icon Blocks -->
+                            </div>
+
+                            <div class="js-slide">
+                                <!-- Icon Blocks -->
+                                <div
+                                    class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v3 g-brd-left-none g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50 g-ml-minus-1">
+                                    <div class="mb-4">
+                                        <span
+                                            class="d-block g-color-gray-dark-v4 g-font-weight-700 text-right mb-3">03</span>
+                                        <span
+                                            class="u-icon-v3 u-shadow-v19 g-bg-white g-color-primary rounded-circle mb-4">
+                                            <i class="icon-education-141 u-line-icon-pro"></i>
+                                        </span>
+                                        <h3 class="h5 g-color-black g-font-weight-600 mb-3">Responsive</h3>
+                                        <p>This is where we sit down, grab a cup of coffee and dial in the details.</p>
+                                    </div>
+                                    <a class="g-brd-bottom g-brd-gray-dark-v5 g-brd-primary--hover g-color-gray-dark-v5 g-color-primary--hover g-font-weight-600 g-font-size-12 text-uppercase g-text-underline--none--hover"
+                                        href="#">Read more</a>
+                                </div>
+                                <!-- End Icon Blocks -->
+                            </div>
+
+                            <div class="js-slide">
+                                <!-- Icon Blocks -->
+                                <div
+                                    class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v3 g-brd-left-none g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50 g-ml-minus-1">
+                                    <div class="mb-4">
+                                        <span
+                                            class="d-block g-color-gray-dark-v4 g-font-weight-700 text-right mb-3">04</span>
+                                        <span
+                                            class="u-icon-v3 u-shadow-v19 g-bg-white g-color-primary rounded-circle mb-4">
+                                            <i class="icon-finance-256 u-line-icon-pro"></i>
+                                        </span>
+                                        <h3 class="h5 g-color-black g-font-weight-600 mb-3">Code</h3>
+                                        <p>This is where we sit down, grab a cup of coffee and dial in the details.</p>
+                                    </div>
+                                    <a class="g-brd-bottom g-brd-gray-dark-v5 g-brd-primary--hover g-color-gray-dark-v5 g-color-primary--hover g-font-weight-600 g-font-size-12 text-uppercase g-text-underline--none--hover"
+                                        href="#">Read more</a>
+                                </div>
+                                <!-- End Icon Blocks -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- End Icon Blocks -->
+            </div>
+        </section>
+        <!-- fim estudo de casos -->
+
+
         <!-- Counters -->
         <!-- <section class="g-brd-top g-brd-bottom g-brd-gray-light-v4 g-pt-50">
             <div class="container">
@@ -446,7 +565,7 @@
         <!-- End Counters -->
 
         <!-- Latest News -->
-        <!-- <section class="g-py-100">
+        <section class="g-py-100">
             <div class="container">
                 <header class="g-mb-50">
                     <div class="u-heading-v2-3--bottom g-brd-primary g-mb-20">
@@ -457,12 +576,12 @@
                     <p class="g-font-size-16">
                         Nosso canal de comunicação.
                     </p>
-                </header> -->
+                </header>
 
-                <!-- <div class="row">
-                    <div class="col-lg-4 g-mb-30 g-mb-0--lg"> -->
+                <div class="row">
+                    <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                         <!-- Article -->
-                        <!-- <article class="u-shadow-v11 rounded">
+                        <article class="u-shadow-v11 rounded">
                             <div class="g-pa-30">
                                 <h3 class="g-font-weight-300 g-mb-15">
                                     <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover"
@@ -475,9 +594,9 @@
                                     criados pela Simemap
                                     já utilizam este recurso, com criptografia AES 128 bits entre os nós de comunicação.
                                 </p>
-                            </div> -->
+                            </div>
 
-                            <!-- <div class="media g-font-size-12 g-brd-top g-brd-gray-light-v4 g-pa-15-30">
+                            <div class="media g-font-size-12 g-brd-top g-brd-gray-light-v4 g-pa-15-30">
                                 <img class="d-flex mr-2 rounded-circle g-width-20 g-height-20"
                                     src="assets/img-temp/100x100/img5.jpg" alt="Image description" />
                                 <div class="media-body align-self-center">
@@ -496,11 +615,11 @@
                                     </a>
                                 </div>
                             </div>
-                        </article> -->
+                        </article>
                         <!-- End Article -->
-                    <!-- </div> -->
+                    </div>
 
-                    <!-- <div class="col-lg-4 g-mb-30 g-mb-0--lg">
+                    <div class="col-lg-4 g-mb-30 g-mb-0--lg">
                         <article class="u-shadow-v11 rounded">
                             <div class="g-pa-30">
                                 <h3 class="g-font-weight-300 g-mb-15">
@@ -536,9 +655,9 @@
                                 </div>
                             </div>
                         </article>
-                    </div> -->
+                    </div>
 
-                    <!-- <div class="col-lg-4">
+                    <div class="col-lg-4">
                         <article class="u-shadow-v11 rounded">
                             <div class="g-pa-30">
                                 <h3 class="g-font-weight-300 g-mb-15">
@@ -574,20 +693,8 @@
                     </div>
                 </div>
             </div>
-        </section> -->
-        <!-- End Latest News -->
-
-        <section class="g-py-100">
-            <div class="container">
-                <header class="g-mb-50">
-                    <div class="u-heading-v2-3--bottom g-brd-primary g-mb-20">
-                        <h2 class="h4 u-heading-v2__title g-color-gray-dark-v2 g-font-weight-600 text-uppercase">
-                            estudos de caso
-                        </h2>
-                    </div>
-                </header>
-            </div>
         </section>
+        <!-- End Latest News -->
 
         <!-- Call To Action -->
         <section class="g-bg-primary g-color-white g-pa-30" style="background-image: url(assets/img/bg/pattern5.png);">
