sem estudos de caso

--- a/index.html
+++ b/index.html
@@ -394,9 +394,8 @@
         <!-- End About Our Company -->
 
         <!-- estudo de casos -->
-        <section class="g-bg-secondary">
+        <!-- <section class="g-bg-secondary">
             <div class="container g-pt-100 g-pb-130">
-                <!-- Icon Blocks -->
                 <div class="row no-gutters">
                     <div class="col-sm-6 col-lg-3">
                         <div class="g-pr-40 g-mt-20">
@@ -426,7 +425,6 @@
                        }
                      }]'>
                             <div class="js-slide">
-                                <!-- Icon Blocks -->
                                 <div
                                     class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v3 g-brd-left-none g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50 g-ml-minus-1">
                                     <div class="mb-4">
@@ -442,11 +440,9 @@
                                     <a class="g-brd-bottom g-brd-gray-dark-v5 g-brd-primary--hover g-color-gray-dark-v5 g-color-primary--hover g-font-weight-600 g-font-size-12 text-uppercase g-text-underline--none--hover"
                                         href="#">Read more</a>
                                 </div>
-                                <!-- End Icon Blocks -->
                             </div>
 
                             <div class="js-slide">
-                                <!-- Icon Blocks -->
                                 <div
                                     class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v3 g-brd-left-none g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50 g-ml-minus-1">
                                     <div class="mb-4">
@@ -462,11 +458,9 @@
                                     <a class="g-brd-bottom g-brd-gray-dark-v5 g-brd-primary--hover g-color-gray-dark-v5 g-color-primary--hover g-font-weight-600 g-font-size-12 text-uppercase g-text-underline--none--hover"
                                         href="#">Read more</a>
                                 </div>
-                                <!-- End Icon Blocks -->
                             </div>
 
                             <div class="js-slide">
-                                <!-- Icon Blocks -->
                                 <div
                                     class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v3 g-brd-left-none g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50 g-ml-minus-1">
                                     <div class="mb-4">
@@ -482,11 +476,9 @@
                                     <a class="g-brd-bottom g-brd-gray-dark-v5 g-brd-primary--hover g-color-gray-dark-v5 g-color-primary--hover g-font-weight-600 g-font-size-12 text-uppercase g-text-underline--none--hover"
                                         href="#">Read more</a>
                                 </div>
-                                <!-- End Icon Blocks -->
                             </div>
 
                             <div class="js-slide">
-                                <!-- Icon Blocks -->
                                 <div
                                     class="u-shadow-v21--hover g-brd-around g-brd-gray-light-v3 g-brd-left-none g-brd-transparent--hover g-bg-white--hover g-transition-0_3 g-cursor-pointer g-px-30 g-pt-30 g-pb-50 g-ml-minus-1">
                                     <div class="mb-4">
@@ -502,14 +494,12 @@
                                     <a class="g-brd-bottom g-brd-gray-dark-v5 g-brd-primary--hover g-color-gray-dark-v5 g-color-primary--hover g-font-weight-600 g-font-size-12 text-uppercase g-text-underline--none--hover"
                                         href="#">Read more</a>
                                 </div>
-                                <!-- End Icon Blocks -->
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- End Icon Blocks -->
             </div>
-        </section>
+        </section> -->
         <!-- fim estudo de casos -->
 
 
@@ -558,9 +548,9 @@
                             Últimas notícias
                         </h2>
                     </div>
-                    <p class="g-font-size-16">
+                    <!-- <p class="g-font-size-16">
                         Nosso canal de comunicação.
-                    </p>
+                    </p> -->
                 </header>
 
                 <div class="row">
